# cross_platform_multi-threading_lib

./: CMakeLists.txt  LICENSE  main.cpp  readme.md
dependencies/: apt.txt
include/: launch_policy.h  my_async.h  my_conditional_variable.h  my_future.h  my_joiner.h  my_lock_guard.h  my_mutex.h  my_promise.h  my_thread.h  my_thread_pool.h  my_thread_safe_queue.h  my_unique_lock.h
portable_types/: portable_cond_var.h  portable_mutex.h  portable_thread.h
src/: my_conditional_variable.cpp  my_future.cpp  my_mutex.cpp  my_promise.cpp  my_thread.cpp  my_thread_pool.cpp  my_thread_safe_queue.cpp  my_unique_lock.cpp
tests/: async_test.cpp  basic_thread_test.cpp  cond_var_test.cpp  lock_guard_test.cpp  mutex_test.cpp  queue_test.cpp  thread_pool_test.cpp  unique_lock_test.cpp
